--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,20 @@ li{
 }
 
 .stack{
-  background-color: rgb(255, 238, 241);
   display: inline-flex;
   align-items: center;
   padding:20px;
+  border: 1px solid #434343;
 }
 
 .starAvg{
   margin: 0;
   margin-right: 20px;
+}
+
+.movieName{
+  display: flex;
+  justify-content: center;
 }
 
 
@@ -25,6 +30,24 @@ li{
   height: 34px;
   border: none;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #434343;
+  color: #fff;
+}
+
+.newMovie{
+  color: gold;
+  margin-right: 10px;
+  animation: infiniteFade 5s ;
+}
+
+@keyframes infiniteFade {
+  0%{opacity: 0;}
+  12.5%{opacity: 1;}
+  25%{opacity: 0;}
+  37.5%{opacity: 1;}
+  50%{opacity: 0;}
+  62.5%{opacity: 1;}
+  75%{opacity: 0;}
+  100%{opacity: 1;}
 }
 
